--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap");
 
+@import url("https://fonts.googleapis.com/css2?family=Source+Serif+Pro:wght@200;300;400;600;700;900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -7,13 +9,20 @@
   font-family: "Comfortaa", sans-serif;
 }
 
-body {
-  background-color: #ddd;
+html {
+  font-size: 1rem;
 }
 
 .navbar {
   display: flex;
   justify-content: center;
+  background-color: #7db7b4;
+  color: white;
+}
+
+.navbar h1 {
+  letter-spacing: 3px;
+  font-family: "Source Serif Pro", serif;
 }
 
 .page {
@@ -34,7 +43,7 @@ li {
 
 li a {
   text-decoration: none;
-  color: black;
+  color: white;
   transition-duration: 150ms;
   font-weight: 700;
   padding-bottom: 3px;
@@ -42,8 +51,8 @@ li a {
 }
 
 li a:hover {
-  color: black;
-  border-bottom: 2px solid black;
+  color: white;
+  border-bottom: 2px solid white;
 }
 
 .btn {
@@ -81,4 +90,28 @@ tr {
 
 .border-primary {
   border-color: #7db7b4 !important;
+}
+
+.border-primary:hover {
+  background-color: #7db7b4;
+  color: white !important;
+}
+
+.border-secondary:hover {
+  background-color: #6c757d;
+  color: white !important;
+}
+
+.border-danger:hover {
+  background-color: #dc3545;
+  color: white !important;
+}
+
+.card {
+  border-radius: 1em;
+  border: none;
+}
+
+img {
+  border-radius: 1em;
 }
